--- a/vignettes/wordnet.Rnw
+++ b/vignettes/wordnet.Rnw
@@ -31,7 +31,7 @@ interface to the
 \proglang{WordNet}\footnote{\url{http://wordnet.princeton.edu/}}
 lexical database of English which is commonly used in linguistics and
 text mining. Internally \pkg{wordnet} uses
-\proglang{Jawbone}\footnote{\url{http://mfwallace.googlepages.com/jawbone.html}},
+\proglang{Jawbone}\footnote{\url{http://mfwallace.googlepages.com/jawbone}},
 a \proglang{Java} \acronym{Api} to \proglang{WordNet}, to access the
 database. Thus, this package needs both a working \proglang{Java}
 installation, activated \proglang{Java} under \proglang{R} support, and a
